Windows device discovery: fix memory leaks

Both QBluetoothDeviceWatcherWinRT and AdvertisementWatcherWrapper
helper classes have the same issue. They pass a shared_from_this()
pointer to the event-handling lambdas to make sure that the object is
alive when the event is received.
Both classes have unsubscribeFromEvents() private methods, which are
used to unsibscribe from windows events, and so release the previously
captured shared_from_this() instances.

However the initial implementation was trying to call these methods
only in destructors. And as a result they never got called, because
the captured shared_from_this() pointers prevented the destruction
of the objects.

This patch moves the unsubscribeFromEvents() calls to the stop()
function, which is invoked from the clien code when we stop handling
the events. This implies that we need to move the call to
subscribeToEvents() function inside start(). In case of
QBluetoothDeviceWatcherWinRT this also allows us to simplify the
code by getting rid of now redundant m_initialized flag.

This commit amends 761a059d5a5ef97e97039f3a34b3a7f92944f1f0 and
36dd802c964f97522d1f5a75c8fb7a67f3061a3d.

Fixes: QTBUG-105742
Change-Id: I46f263750a26cc4265081db325302123c7548a1c
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
(cherry picked from commit 37a9d533c541db63fd1b7c261ca832ea56ab8203)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>